--- a/FRONT-END/angular.json
+++ b/FRONT-END/angular.json
@@ -30,13 +30,14 @@
               "node_modules/primeng/resources/primeng.min.css",
               "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
               "node_modules/primeicons/primeicons.css",
+              "node_modules/bootstrap-icons/font/bootstrap-icons.css",
               "src/styles.css",
               "node_modules/ngx-toastr/toastr.css"
             ],
             "scripts": [],
             "server": "src/main.server.ts",
             "prerender": true,
-            "ssr": {
+            "ssr": {  
               "entry": "server.ts"
             }
           },
@@ -94,7 +95,8 @@
               }
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/bootstrap-icons/font/bootstrap-icons.css"
             ],
             "scripts": []
           }
