--- a/FRONT-END/package.json
+++ b/FRONT-END/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-server": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.0",
+    "bootstrap-icons": "^1.11.3",
     "express": "^4.18.2",
     "ngx-toastr": "^19.0.0",
     "primeicons": "^7.0.0",
