--- a/FRONT-END/package.json
+++ b/FRONT-END/package.json
@@ -24,6 +24,7 @@
     "bootstrap-icons": "^1.11.3",
     "express": "^4.18.2",
     "ngx-toastr": "^19.0.0",
+    "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
     "primeng": "^17.18.9",
     "rxjs": "~7.8.0",
