--- a/BACK-END/.env
+++ b/BACK-END/.env
@@ -1,8 +1,11 @@
-PORT = 3006
-DB_HOST = localhost
-DB_USER = root
-DB_PASSWORD =
-DB_NAME = comerciplus
-DB_DIALECT = mysql
+PORT=3006
+DB_HOST=localhost
+DB_USER=root
+DB_PASSWORD=
+DB_NAME=comerciplus
+DB_DIALECT=mysql
 SECRET_KEY=Carol123456789Acevedo
 
+# Configuración de correo electrónico (Gmail)
+EMAIL_USER=acevedocanoc27@gmail.com
+EMAIL_PASS=p l w e a u x y o l x h w r s g
