--- a/BACK-END/package.json
+++ b/BACK-END/package.json
@@ -19,6 +19,7 @@
     "express-validator": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.0",
+    "nodemailer": "^6.9.15",
     "nodemon": "^3.1.4",
     "sequelize": "^6.37.3",
     "uuid": "^10.0.0"
