--- a/FRONT-END/package.json
+++ b/FRONT-END/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-server": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.0",
+    "@types/jspdf": "^2.0.0",
     "bootstrap-icons": "^1.11.3",
     "express": "^4.18.2",
     "html2canvas": "^1.4.1",
