--- a/MOBILE/pubspec.yaml
+++ b/MOBILE/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 
 dependencies:
   camera: 0.10.0
+  fl_chart: ^0.69.0
   flutter:
     sdk: flutter
   flutter_dotenv: 5.2.1
@@ -17,6 +18,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
+  flutter_animate: ^4.5.0
 
 flutter:
   uses-material-design: true
