--- a/MOBILE/analysis_options.yaml
+++ b/MOBILE/analysis_options.yaml
@@ -1,5 +1,6 @@
 include: package:flutter_lints/flutter.yaml
 analyzer:
   errors:
+    camel_case_types: ignore
     depend_on_referenced_packages: ignore
     library_private_types_in_public_api: ignore
