--- a/MOBILE/pubspec.yaml
+++ b/MOBILE/pubspec.yaml
@@ -12,7 +12,9 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_dotenv: 5.2.1
+  flutter_svg: ^2.0.14
   http: ^1.2.2
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
