--- a/MOBILE/pubspec.yaml
+++ b/MOBILE/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
     sdk: flutter
   flutter_dotenv: 5.2.1
   flutter_svg: ^2.0.14
+  google_fonts: ^6.2.1
   http: ^1.2.2
   intl: ^0.19.0
 
