Ya descarga la app con la API local

--- a/MOBILE/android/gradle.properties
+++ b/MOBILE/android/gradle.properties
@@ -1,3 +1,8 @@
-org.gradle.jvmargs=-Xmx4G -XX:+HeapDumpOnOutOfMemoryError
+org.gradle.jvmargs=-Xmx4096M -Dfile.encoding=UTF-8 --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.util.concurrent=ALL-UNNAMED --add-opens=java.base/java.net=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.base/sun.nio.fs=ALL-UNNAMED --add-opens=java.base/sun.security.ssl=ALL-UNNAMED --add-opens=java.base/sun.security.ssl=ALL-UNNAMED --add-opens=java.base/sun.net.www.protocol.http=ALL-UNNAMED
 android.useAndroidX=true
 android.enableJetifier=true
+android.nonTransitiveRClass=false
+android.defaults.buildfeatures.buildconfig=true
+org.gradle.parallel=true
+org.gradle.configureondemand=true
+org.gradle.java.home=C:\\Program Files\\Java\\jdk-17
