--- a/MOBILE/android/app/src/main/AndroidManifest.xml
+++ b/MOBILE/android/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     <uses-permission android:name="android.permission.CAMERA"/>
     
     <application
-        android:label="comerciplus"
+        android:label="ComerciPlus"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
