--- a/MOBILE/assets/.env
+++ b/MOBILE/assets/.env
@@ -1,2 +1,3 @@
-API_URL = 'http://localhost:3006'
-# API_URL = 'http://192.168.80.14:3006' # Para probar en red local
+#API_URL = 'http://localhost:3006'
+
+API_URL = 'http://192.168.80.14:3006' # Para probar en red local
