--- a/FRONT-END/package.json
+++ b/FRONT-END/package.json
@@ -27,6 +27,7 @@
     "express": "^4.18.2",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "ngx-toastr": "^19.0.0",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
