--- a/BACK-END/package.json
+++ b/BACK-END/package.json
@@ -22,9 +22,11 @@
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.0",
     "nodemailer": "^6.9.15",
-    "nodemon": "^3.1.4",
     "sequelize": "^6.37.3",
     "socket.io": "^4.8.1",
     "uuid": "^10.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.7"
   }
 }
