--- a/BACK-END/package.json
+++ b/BACK-END/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node main.js",
-    "dev": "nodemon main.js"
+    "dev": "nodemon main.js",
+    "install": "npm rebuild bcrypt --build-from-source"
   },
   "keywords": [],
   "author": "",
