--- a/BACK-END/package.json
+++ b/BACK-END/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node main.js",
     "dev": "nodemon main.js",
-    "build": "npm install && npm install bcrypt"
+    "build": "npm i -g node-pre-gyp && npm install bcrypt"
   },
   "keywords": [],
   "author": "",
