--- a/BACK-END/package.json
+++ b/BACK-END/package.json
@@ -7,7 +7,7 @@
     "node": "20.10.0"
   },
   "scripts": {
-    "build": "npm install -g node-gyp && npm rebuild bcrypt",
+    "build": "npm install --build-from-source bcrypt",
     "test": "jest",
     "start": "node main.js"
   },
