--- a/BACK-END/.env
+++ b/BACK-END/.env
@@ -1,9 +1,11 @@
-PORT=3006
-DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=
+DB_HOST=mysql-457bf77-comerciplus1.e.aivencloud.com
+DB_USER=avnadmin
+DB_PASSWORD=AVNS_pdZEAMz4TRm9YiQqhVK
 DB_NAME=comerciplus
+PORT=26552
 DB_DIALECT=mysql
+DB_SSL_MODE=REQUIRED
+
 SECRET_KEY=Carol123456789Acevedo
 
 # Configuración de correo electrónico (Gmail)
