--- a/BACK-END/.env
+++ b/BACK-END/.env
@@ -2,7 +2,7 @@ DB_HOST=mysql-457bf77-comerciplus1.e.aivencloud.com
 DB_USER=avnadmin
 DB_PASSWORD=AVNS_pdZEAMz4TRm9YiQqhVK
 DB_NAME=comerciplus
-PORT=26552
+DB_PORT=26552
 DB_DIALECT=mysql
 DB_SSL_MODE=REQUIRED
 
