Ruta de despliegue

--- a/MOBILE/assets/.env
+++ b/MOBILE/assets/.env
@@ -1,3 +1,1 @@
-API_URL = 'http://localhost:3006'
-
-#API_URL ='https://tsn9vglg-3006.use2.devtunnels.ms'
+API_URL ='https://comerciplus-dggj.onrender.com'
