--- a/MOBILE/pubspec.yaml
+++ b/MOBILE/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   flutter_svg: ^2.0.14
   google_fonts: ^6.2.1
   shared_preferences: ^2.1.0
+  logging: ^1.2.0
   http: ^1.2.2
   intl: ^0.19.0
 
