--- a/BACK-END/.env
+++ b/BACK-END/.env
@@ -9,5 +9,5 @@ DB_SSL_MODE=REQUIRED
 SECRET_KEY=Carol123456789Acevedo
 
 # Configuración de correo electrónico (Gmail)
-EMAIL_USER=acevedocanoc27@gmail.com
-EMAIL_PASS=p l w e a u x y o l x h w r s g
+EMAIL_USER=sftcomerciplus@gmail.com
+EMAIL_PASS=yaju xtzz rplv nwyj
