--- a/BACK-END/package.json
+++ b/BACK-END/package.json
@@ -33,7 +33,9 @@
     "uuid": "^10.0.0"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.14",
     "jest": "^29.7.0",
+    "jest-mock-extended": "^4.0.0-beta1",
     "nodemon": "^3.1.7",
     "supertest": "^7.0.0"
   }
