--- a/BACK-END/package.json
+++ b/BACK-END/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "build": "npm install --build-from-source bcrypt",
     "test": "jest",
-    "start": "node main.js"
+    "start": "cross-env NODE_ENV=production node main.js",
+    "start:local": "cross-env NODE_ENV=local node main.js"
   },
   "keywords": [],
   "author": "",
@@ -37,6 +38,7 @@
     "jest": "^29.7.0",
     "jest-mock-extended": "^4.0.0-beta1",
     "nodemon": "^3.1.7",
-    "supertest": "^7.0.0"
+    "supertest": "^7.0.0",
+    "cross-env": "^7.0.3"
   }
 }
