--- a/BACK-END/package.json
+++ b/BACK-END/package.json
@@ -20,6 +20,7 @@
     "chart.js": "^3.9.1",
     "chartjs-node-canvas": "^4.1.6",
     "client": "^0.0.1",
+    "cloudinary": "^2.5.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
@@ -35,10 +36,13 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.14",
+    "chai": "^5.1.2",
+    "cross-env": "^7.0.3",
     "jest": "^29.7.0",
     "jest-mock-extended": "^4.0.0-beta1",
+    "mocha": "^10.8.2",
     "nodemon": "^3.1.7",
-    "supertest": "^7.0.0",
-    "cross-env": "^7.0.3"
+    "sinon": "^19.0.2",
+    "supertest": "^7.0.0"
   }
 }
