--- a/BACK-END/package.json
+++ b/BACK-END/package.json
@@ -35,10 +35,10 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.14",
+    "cross-env": "^7.0.3",
     "jest": "^29.7.0",
     "jest-mock-extended": "^4.0.0-beta1",
     "nodemon": "^3.1.7",
-    "supertest": "^7.0.0",
-    "cross-env": "^7.0.3"
+    "supertest": "^7.0.0"
   }
 }
