--- a/MOBILE/pubspec.yaml
+++ b/MOBILE/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   fl_chart: ^0.69.0
   flutter:
     sdk: flutter
+  flutter_secure_storage: ^5.0.0
   flutter_dotenv: 5.2.1
   path_provider: ^2.0.13
   flutter_plugin_android_lifecycle: ^2.0.10
