--- a/MOBILE/android/app/build.gradle
+++ b/MOBILE/android/app/build.gradle
@@ -41,7 +41,7 @@ android {
         applicationId = "com.example.comerciplus"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdk = 21
+        minSdkVersion = 21
         targetSdk = 34
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
