--- a/MOBILE/pubspec.yaml
+++ b/MOBILE/pubspec.yaml
@@ -28,8 +28,19 @@ dev_dependencies:
   flutter_lints: ^3.0.0
   flutter_animate: ^4.5.0
   mobile_scanner: ^3.5.5
+  flutter_launcher_icons: "^0.9.2"
 
 flutter:
   uses-material-design: true
   assets:
     - assets/.env
+    - assets/images/iconoc.png
+    - assets/images/logo.png
+    - assets/images/logo2.1.png
+    - assets/images/logo2.png
+
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/logo.png"  # Aquí pones la ruta de tu imagen
