--- a/FRONT-END/package.json
+++ b/FRONT-END/package.json
@@ -24,6 +24,7 @@
     "@angular/ssr": "^18.2.0",
     "@types/jspdf": "^2.0.0",
     "bootstrap-icons": "^1.11.3",
+    "canvg": "^4.0.2",
     "chart.js": "^4.4.6",
     "express": "^4.18.2",
     "html2canvas": "^1.4.1",
