--- a/BACK-END/.env.local
+++ b/BACK-END/.env.local
@@ -15,4 +15,5 @@ SECRET_KEY=Carol123456789Acevedo
 EMAIL_USER=sftcomerciplus@gmail.com
 EMAIL_PASS=yaju xtzz rplv nwyj
 
+webUrl='https://comerciplus-one.vercel.app' # Página web desplegada
 CLOUDINARY_URL=cloudinary://856322536122918:F609UeejOcVGg6RVYUomTwadbWk@ds35s9qx2
